More updates and fixes. Adding suggested memory settings for testing.