@@ -8,8 +8,6 @@
 Testing a CDAP Application
 ================================================
 
-.. highlight:: java
-
 Strategies in Testing Applications
 ==================================
 
@@ -28,6 +26,18 @@ Note that for building an application, you only need to include the
 CDAP API in your dependencies. For testing, however, you need the
 CDAP run-time. To build your test case, extend the
 ``TestBase`` class.
+
+.. highlight:: console
+
+Running Tests from an IDE
+--------------------------
+When running tests from an IDE such IntelliJ or Eclipse, set the memory setting for the
+``JUnit`` tests that are run from the IDE to an increased amount of memory. We suggest
+starting with::
+
+  -Xmx1024m -XX:MaxPermSize=128m
+
+.. highlight:: java
 
 Strategies in Testing Flows
 ===========================
@@ -207,7 +217,7 @@ The assertion will verify that the correct result was received.
 
 Validating Test Data with SQL
 =============================
-Often the easiest way to verify that a test produced the right data is to run a SQL query - if the data sets involved
+Often the easiest way to verify that a test produced the right data is to run a SQL query—if the data sets involved
 in the test case are record-scannable as described in :ref:`data-exploration`.
 This can be done using a JDBC connection obtained from the test base::
 
